fix tree icon "jumping" effect
Former-commit-id: 17d0f6ec8dcf0be887791a6a531b4170ca76d6df

--- a/sources/easygenerator.Web/Content/treeOfContent.css
+++ b/sources/easygenerator.Web/Content/treeOfContent.css
@@ -75,7 +75,7 @@
         width: 32px;
         height: 21px;
         right: 10px;
-        top: 12px;
+        top: 11px;
         background: url('images/sprites.png') -128px -251px;
     }
 
